# Rai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml
docs/: BUILD.md  CONFIGURATION.md  RELEASING.md
scripts/: fetch-voice-model.ps1  fetch-voice-model.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  providers.rs  screen.rs
ui/: assistant.html  assistant.js  home.html  home.js  index.html  main.js  shared.js  styles.css
