[package]
name = "rai"
version = "0.3.0"
description = "Rai — your quiet second mind. An invisible, configurable desktop assistant that sees your screen and hears your calls."
authors = ["Abdulrafiu Izuafa"]
edition = "2021"
rust-version = "1.82"

[lib]
name = "rai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
raw-window-handle = "0.6"
dirs = "5"
xcap = "0.9"
png = "0.18"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
